# CongFD

./: AccuracyTest.cpp  CMakeLists.txt  cgnsReadTest.cpp  interScheme.hpp  main.cpp  write_grid_str.cpp  zoneMain.cpp
cases/: testGrid.cgns  testgrid.pw
cases/test/: grid_c.cgns  grid_c1.cgns  test.txt  ~$数据处理.xlsx  数据处理.xlsx
include/: SpaceDis.hpp  boundary.hpp  data.hpp  macro.hpp  oneDDiscrete.hpp  vecs.hpp
release/: CMakeCache.txt  Makefile  cmake_install.cmake  congFD
release/src/: Makefile  cmake_install.cmake
release/utils/: Makefile  cmake_install.cmake
src/: CmakeLists.txt  SpaceDis.cpp  boudary.cpp  cgnsio.cpp  data.cpp  interScheme.cpp  main.cpp  oneDDiscrete.cpp  sp_recon.cpp  vecs.cpp
src/include/: Bnds.hpp  EulerEquation1D.hpp  SpaceDis.hpp  block.hpp  blockSolver.hpp  boundary.hpp  burgers.hpp  cgnsio.hpp  data.hpp  dataManipulater.hpp  differ.hpp  differenceScheme.hpp  eigenSystem.hpp  equation.hpp  fluxPointFlux.hpp  fluxScheme.hpp  fluxSchemes.hpp  info.hpp  initializer.hpp  interScheme.hpp  interSchemeCellCenter.hpp  interface.hpp  macro.hpp  oneDBnd.hpp  reconBVD.hpp  reconTenoThinc.hpp  reconstructor.hpp  reconstructor5order.hpp  reconstructorCellCenter.hpp  reconstructorFaceCenter.hpp  solvePointFlux.hpp  solverType.hpp  sp_distributor.hpp  zone.hpp
src/src/: EulerEquation1D.cpp  SpaceDis.cpp  bergers.cpp  block.cpp  blockSolver.cpp  bnds.cpp  boudary.cpp  cgnsio.cpp  data.cpp  dataManipulater.cpp  differ.cpp  eigenSystem.cpp  equation.cpp  fluxScheme.cpp  grid.cpp  info.cpp  initializer.cpp  interScheme.cpp  interSchemeCellCenter.cpp  macro.cpp  oneDBnd.cpp  reconBVD.cpp  reconstructor.cpp  reconstructor5order.cpp  solverType.cpp  sp_difference.cpp  sp_distributor.cpp  sp_flux.cpp  sp_recon.cpp  zone.cpp
utils/exactSolBurgers/: main.cpp  main2.cpp
utils/roefluxtest/: main.cpp
(+2 files in other folders)
